2002-01-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* updated systems a bit
	* started to work on AI scripting again


2002-01-25 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* Added fiery galaxy....looks much better than the others!

2002-01-25 Daniel Horn <hellcatv@users.sourceforge.net>

	* Warp effect now looks cool!
	* Fixed bug with deletion of animations
	* Added entering jump effect.
	* Fixed bug with SubUnit being set on random planets, and collisions not being checked against them
	* Added feature that planets may be targetted anywhere due to their size
	
2002-01-25 Daniel Horn <hellcatv@users.sourceforge.net>
	
	* Fixed a whole lot of lighting problems with local lights. Not all are fixed, but enough to do the standard things I think.
	* Fixed a lot of problems with collision tables and multiple systems (weapons used to be left behind, which would cause random crashes
	* Added AI jumping through jump portals.
	* Made AI follow human through jumping
	* Made all players exit at a jump point that would lead back to original system
	* Added an animation (right now explosion) that will play before jumping
	* Added ability to specify jump drives on specific starships with <Jump delay="3" jumpenergy="10"/> which would mean that it would take 10 energy to jump (if it were negative it would be 10 fuel times mass)
	* Added ability to make planets not cull by passing in ONE ONE to the alphamap of the planet
	* Made test2.mission demonstrate combat with jump points (fun)

2002-01-24 Denial Horn <hellcatv@users.sourceforge.net>
	* Added jump drives!  Now you can go to a planet designated as a jump point...press 'j' and it will load the system if not already loaded...
	* Try jumping from the green sphere around earth...and then activating time compression and jumping back from the big earth in the next system... it's great
	* Warning using fighters[0] as your fighter to indicate whether to teleport the cam as well as the ship
